--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
+    "axios": "^1.8.4",
     "next": "15.2.0",
     "react": "^19.0.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
+    "sweetalert2": "^11.17.2",
     "swiper": "^11.2.5"
   },
   "devDependencies": {
